<resources>

    <!--APPLICATION-->
    <string name="app_name">GfyCatnip</string>
    <string name="action_settings">Settings</string>
    <string name="search_title">Search</string>

    <!--SPLASH-->
    <string name="refresh_token_error_message">An error was encountered while attempting to refresh your token, please try again.</string>

    <!--LOGIN-->
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login">log in</string>
    <string name="retry">RETRY</string>
    <string name="login_error_message">Unable to login, please try again.</string>
    <string name="title_activity_handle_share">HandleShareActivity</string>

    <!--NUX-->
    <string name="empty_space">Your space is empty</string>
    <string name="empty_space_description">Go share any gif with GfyCatnip and\nyou will see it here</string>
    <string name="search_gif_link_text"><u>Search for Awesome Gifs!</u></string>

    <!--ACTION DIALOG-->
    <string name="share">Share</string>
    <string name="edit">Edit</string>

    <!--SAVE DIALOG-->
    <string name="save_dialog_message">Bookmark your GfyCat in GfyCatnip\nso you can use it later!</string>
    <string name="link_hint">Link</string>
    <string name="tag_hint">Hash Tags</string>
    <string name="description_hint">Description</string>
    <string name="gfy_name_hint">Gfy Name</string>
    <string name="save">Save</string>
    <string name="saving">Saving…</string>
    <string name="cancel">Cancel</string>

</resources>
