<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/dialog_save_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@android:color/background_light">

    <TextView
        android:id="@+id/dialog_save_message"
        android:textColor="@android:color/black"
        android:text="@string/save_dialog_message"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/gfycat_name_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColorHint="@android:color/darker_gray">

        <EditText
            android:id="@+id/gfycat_name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/gfy_name_hint"
            android:typeface="sans"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/link_field_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColorHint="@android:color/darker_gray">

        <EditText
            android:id="@+id/link_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/link_hint"
            android:typeface="sans"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/hashtag_field_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColorHint="@android:color/darker_gray">

        <EditText
            android:id="@+id/hashtag_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/tag_hint"
            android:typeface="sans"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/description_field_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColorHint="@android:color/darker_gray">

        <EditText
            android:id="@+id/description_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/description_hint"
            android:typeface="sans"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/dialog_save_button_container"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/dialog_save_button"
            android:background="@drawable/login_button_background"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp" />

        <Button
            android:id="@+id/dialog_cancel_button"
            android:background="@drawable/login_button_background"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:layout_width="128dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>